# ElectraOneApps

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
orac/lib/kontrol/: CMakeLists.txt  Entity.h  KontrolModel.cpp  KontrolModel.h  Module.cpp  Module.h  Parameter.cpp  Rack.cpp  Rack.h
orac/src/: AppSettings.h  CMakeLists.txt  Debug.cpp  Debug.h  Device.h  E1KontrolCallback.h  Electra.h  ElectraApp.cpp  ElectraApp.h  Event.h  IUICallback.h  Message.h  SysExStream.h
orac/src/Components/: OComponent.h  OModule.cpp  OModule.h  OPage.cpp  OPage.h  OParam.cpp  OParam.h  ORack.cpp  ORack.h  TextComponent.h
orac/src/Windows/: AppWindows.cpp  AppWindows.h  MainWindow.cpp  MainWindow.h  MenuWindow.cpp  MenuWindow.h  OWindow.cpp  OWindow.h  Windows.cpp  Windows.h
